fix z-index issue with tippy

--- a/src/css/components/tippy_theme.component.pcss
+++ b/src/css/components/tippy_theme.component.pcss
@@ -2,3 +2,7 @@
     font-family: var(--main-font);
     font-size: 1.15rem;
 }
+
+.tippy-popper {
+    z-index: 2147483642 !important;
+}
